[package]
name = "sdb_signal"
version = "0.1.0"
edition = "2021"
authors = ["Mike Yang <yfractal@gmail.com>"]
license = "MIT"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
lazy_static = "1.5.0"
libc = "0.2.169"
magnus = { version = "0.6.2" }
rb-sys = { version = "0.9.82", features = ["stable-api", "stable-api-compiled-testing"] } # using stable-api-compiled-testing for generating bindings from Ruby source
